@@ -282,7 +282,8 @@ Version 7.4  [ (to be announced) ]
         Class Link:
             - Added initial support for virtual knots and links, with new
               routines isClassical(), virtualGenus(), makeVirtual(), graft(),
-              oddWrithe(), arrow(), and groups().
+              oddWrithe(), arrow(), groups(), extendedGroup(), and
+              extendedGroups().
             - New routine alexander() and class constant alexanderVar.
             - New routine makeAlternating().
             - New routine seifertCircles().
